--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,27 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="cidades">
+            <div class="textinho">
+            <h1>Cidades mais procuradas</h1>
+            </div>
+            
+            <div class="row">
+                <div class="citys"><a href=""><img src="/images/Alcântara.jpg" alt="Button 1"></a></div>
+                <div class="citys"><a href=""><img src="/images/Arthur-Azevedo.jpg" alt="Button 2"></a></div>
+                <div class="citys"><a href=""><img src="/images/Atins.jpg" alt="Button 3"></a></div>
+            </div>
+            <div class="row">
+                <div class="citys"><a href=""><img src="/images/mesas.jpeg" alt="Button 4"></a></div>
+                <div class="citys"><a href=""><img src="/images/imperatriz.jpg" alt="Button 5"></a></div>
+                <div class="citys"><a href=""><img src="/images/sao-jose.jpg" alt="Button 6"></a></div>
+            </div>
+            
+        </div>
+    </footer>
     <script src="/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js" integrity="sha512-6sSYJqDreZRZGkJ3b+YfdhB3MzmuP9R7X1QZ6g5aIXhRvR1Y/N/P47jmnkENm7YL3oqsmI6AK+V6AD99uWDnIw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 </body>
 </html>
