--- a/public/style.css
+++ b/public/style.css
@@ -47,9 +47,9 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url('/images/lençois-maranhenses.jpg') no-repeat center center;
+    background: url('/images/lagoa-Azul_Maranhao.jpg') no-repeat center center;
     background-size: cover;
-    position: relative;
+    position:relative;
 }
 
 .search-container {
@@ -113,11 +113,11 @@ main {
     border-radius: 5px;
     font-size: 1rem;
 }
-
+/*
 .password-container {
     display: flex;
     gap: 1rem;
-}
+}*/
 
 .password-container input[type="password"] {
     flex: 1;
@@ -234,4 +234,39 @@ textarea.input_form {
 
 .btn:hover {
     background-color: #A33F1F;
+}
+
+.cidades{
+    position: absolute;
+    bottom: 100;
+    width: 100%;
+    height: 100%; 
+    background-color: #f5f4f5;
+
+}
+.row {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px; /* Espaço entre as duas linhas */
+}
+.citys{
+    margin: 0 5px;
+    border: 10px;
+    border-color: #A33F1F;
+}
+.citys img{
+    width: 50vh;
+    height: 30vh;    
+}
+.textinho{
+    margin-bottom: 20px;
+    padding-top: 1%; ;
+    text-align: center;
+}
+.citys a:hover{
+    background-color: #A33F1F;   
+}
+
+.texto-login{
+    padding-top: 10px;
 }
