--- a/views/users/index.html
+++ b/views/users/index.html
@@ -49,7 +49,7 @@
                             <td>${user.email}</td>
                             <td>
                                 <a href="/update/${user.id}" class="action-button">Atualizar</a>
-                                <a href="/delete/${user.id}" class="action-button">Deletar</a>
+                                <a href="/delete/${user.id}" onclick="return confirm('Deseja realmente apagar esse usuário?')" class="action-button">Deletar</a>
                             </td>
                         `;
                         usersTbody.appendChild(userRow);
