--- a/views/index.html
+++ b/views/index.html
@@ -9,11 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
     <header>
         <div class="logo">
             <a href="/">Turistando</a>
+        </div>
+        <div class="logo">
+            <p id="user-name" style="display: none;">Bem-vindo</p>
         </div>
         <div class="user-icon">
             <a href="/registrar">
@@ -45,10 +49,67 @@
                 <div class="citys"><a href=""><img src="/images/imperatriz.jpg" alt="Button 5"></a></div>
                 <div class="citys"><a href=""><img src="/images/sao-jose.jpg" alt="Button 6"></a></div>
             </div>
-            
+            <div style="display: flex; justify-content: center;">
+                <button class="btn" id="toggle-map-btn">Ver mais</button>
+            </div>
+            <div id="map"  class="mapa">
+                <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+                <script class="MAPA">
+        var mapInitialized = false;
+
+document.getElementById('toggle-map-btn').addEventListener('click', function() {
+    var mapContainer = document.getElementById('map');
+    var button = document.getElementById('toggle-map-btn');
+
+    if (mapContainer.style.display === 'none' || mapContainer.style.display === '') {
+        mapContainer.style.display = 'block';
+        button.textContent = 'Ocultar';
+
+        if (!mapInitialized) {
+            // Inicializa o mapa e centraliza no Maranhão (São Luís)
+            var map = L.map('map').setView([-4.960999225079996, -45.27400357825306], 7); // Zoom ajustado para visualizar o estado do Maranhão
+
+            // Adiciona uma camada de mapa
+            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+            }).addTo(map);
+
+            // Lista de locais a serem marcados no Maranhão
+            var locations = [
+                { lat: -5.53544, lng: -47.49034, title: 'Beira Rio Orla de Imperatriz' },
+                { lat: -5.53142, lng: -47.48445, title: 'Calçadão de Imperatriz' },
+                { lat: -7.349726, lng: -46.947914, title: 'Parque Nacional da Chapada das Mesas' },
+                { lat: -7.04417, lng: -47.44249, title: 'Cachoeira do Santuário - Pedra Caída' },
+                { lat: -2.51456, lng: -44.03237, title: 'Praia Panaquatira' },
+                { lat: -2.56171, lng: -44.05554, title: 'Paróquia e Santuário de São José de Ribamar' },
+                { lat: -2.40709, lng: -44.41516, title: 'Igreja do Carmo em Alcântara' },
+                { lat: -2.40888, lng: -44.41650, title: 'Rua da Amargura em Alcântara' },
+                { lat: -2.56429, lng: -42.79485, title: 'Canto do Atins em Barreirinhas' },
+                { lat: -2.48584, lng: -43.12841, title: 'Lençóis Maranhenses' },
+                { lat: -2.52919, lng: -44.30630, title: 'Centro Histórico de São Luís' },
+                { lat: -2.50447, lng: -44.31849, title: 'Espigão Ponta d\'Areia em São Luís' }
+            ];
+
+            // Loop para criar e adicionar os marcadores
+            locations.forEach(function(location) {
+                L.marker([location.lat, location.lng]).addTo(map)
+                    .bindPopup(location.title);
+            });
+
+            mapInitialized = true;
+        }
+    } else {
+        mapContainer.style.display = 'none';
+        button.textContent = 'Ver mais';
+    }
+});
+                </script>
+            </div>
         </div>
+
     </footer>
     <script src="/script.js"></script>
+    <script src="/model/User.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js" integrity="sha512-6sSYJqDreZRZGkJ3b+YfdhB3MzmuP9R7X1QZ6g5aIXhRvR1Y/N/P47jmnkENm7YL3oqsmI6AK+V6AD99uWDnIw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 </body>
