--- a/public/style.css
+++ b/public/style.css
@@ -42,6 +42,22 @@ header .user-icon a {
     color: #fff;
 }
 
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    margin-bottom: 20px;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-bottom: 10px;
+}
+
 main {
     flex: 1;
     display: flex;
