SQL atualizado e fotos adicionadas

--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
     <main>
         <div class="background-image">
             <div class="search-container">
-                <form action="/search" method="GET">
+                <form action="/search" method="GET" class="search-container">
                     <input type="text" name="query" placeholder="Qual sua próxima parada?" required>
                     <button type="submit">Pesquisar</button>
                 </form>
