--- a/public/style.css
+++ b/public/style.css
@@ -129,11 +129,6 @@ main {
     border-radius: 5px;
     font-size: 1rem;
 }
-/*
-.password-container {
-    display: flex;
-    gap: 1rem;
-}*/
 
 .password-container input[type="password"] {
     flex: 1;
@@ -182,6 +177,34 @@ main {
     background-color: #f9f9f9;
 }
 
+.attractions-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+.attraction-item {
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+}
+.attraction-item h2 {
+    margin: 0;
+    font-size: 1.5em;
+}
+.attraction-item-content {
+    display: flex;
+    align-items: flex-start;
+    margin-top: 10px;
+}
+.attraction-item img {
+    max-width: 150px;
+    height: auto;
+    margin-right: 15px;
+}
+.attraction-item-description {
+    max-width: calc(100% - 215px);
+}
+
 .action-button {
     margin-right: 0.5rem;
     color: #C2512D;
@@ -198,6 +221,12 @@ main {
     align-items: center;
     justify-content: center;
     padding: 2rem;
+}
+
+.ponto-detalhes {
+    margin: 10px 0 20px 0;
+    align-items: start;
+    justify-content: start;
 }
 
 h1 {
@@ -247,6 +276,7 @@ textarea.input_form {
     border-radius: 4px;
     font-size: 1rem;
     cursor: pointer;
+    text-decoration: none;
 }
 
 .btn:hover {
@@ -264,7 +294,7 @@ textarea.input_form {
 .row {
     display: flex;
     justify-content: center;
-    margin-bottom: 10px; /* Espaço entre as duas linhas */
+    margin-bottom: 10px; 
 }
 .citys{
     margin: 0 5px;
@@ -276,8 +306,8 @@ textarea.input_form {
     height: 30vh;    
 }
 .textinho{
+    margin-top: 20px;
     margin-bottom: 20px;
-    padding-top: 1%; ;
     text-align: center;
 }
 .citys a:hover{
@@ -342,4 +372,87 @@ textarea.input_form {
 
 .tab-panel.active {
     display: block;
+}
+
+/* flip-card */
+.row-flip {
+    width: 1000px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 250px;
+    perspective: 1000px;
+    margin: 10px;
+    cursor: pointer;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.flip-card-front {
+    background-color: #bbb;
+    color: black;
+}
+
+.flip-card-front img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.flip-card-back {
+    background-color: #C2512D;
+    color: white;
+    transform: rotateY(180deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.flip-card-back a {
+    color: white;
+    text-decoration: none;
+}
+
+.flip-card-back a:hover {
+    color: white;
+    text-decoration: underline;
+}
+
+@media (max-width: 600px) {
+    .row-flip {
+        width: 320px;
+    }
+    
+    .flip-card {
+        width: 100%;
+        margin: 10px 0;
+    }
 }
