--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,21 +38,26 @@
     <footer>
         <div class="cidades">
             <div class="textinho">
-            <h1>Cidades mais procuradas</h1>
+                <h1>Cidades mais procuradas</h1>
+            </div>
+
+            <div class="row-flip">
+                <% pontos.forEach(ponto => { %>
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="<%= ponto.imagem %>" alt="<%= ponto.nome %>">
+                            </div>
+                            <div class="flip-card-back">
+                                <h2><a href="/ponto?id=<%= ponto.id %>"><%= ponto.nome %></a></h2>
+                            </div>
+                        </div>
+                    </div>
+                <% }) %>
             </div>
             
-            <div class="row">
-                <div class="citys"><a href=""><img src="/images/Alcântara.jpg" alt="Alcântara"></a></div>
-                <div class="citys"><a href=""><img src="/images/Arthur-Azevedo.jpg" alt="Arthur Azevedo"></a></div>
-                <div class="citys"><a href=""><img src="/images/Atins.jpg" alt="Atins"></a></div>
-            </div>
-            <div class="row">
-                <div class="citys"><a href=""><img src="/images/mesas.jpeg" alt="Chapada das Mesas"></a></div>
-                <div class="citys"><a href=""><img src="/images/imperatriz.jpg" alt="Imperatriz"></a></div>
-                <div class="citys"><a href=""><img src="/images/sao-jose.jpg" alt="Sao José"></a></div>
-            </div>
-            <div style="display: flex; justify-content: center;">
-                <button class="btn" id="toggle-map-btn">Ver mais</button>
+            <div style="width: 100%; display: flex; justify-content: center;">
+                <button class="btn" id="toggle-map-btn">Ver no mapa</button>
             </div>
             <div id="map" class="mapa">
                 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
