--- a/views/attractions/results.ejs
+++ b/views/attractions/results.ejs
@@ -26,7 +26,7 @@
         <ul id="attractions" class="attractions-list">
             <% results.forEach(result => { %>
                 <li class="attraction-item">
-                    <h2><a href="/ponto?id=<%= result.id %>" style="color: black;"><%= result.nome %></a></h2>
+                    <h2><a href="/ponto?id=<%= result.id %>" style="color: black; text-decoration: none;"><%= result.nome %></a></h2>
                     <div class="attraction-item-content">
                         <img src="<%= result.imagem %>" alt="<%= result.nome %>">
                         <p class="attraction-item-description">
