--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
     <footer>
         <div class="cidades">
             <div class="textinho">
-                <h1>Cidades mais procuradas</h1>
+                <h1>Pontos mais procurados</h1>
             </div>
 
             <div class="row-flip">
